deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rambleon
  namespace: rambleon
  labels:
    app: rambleon
spec:
  selector:
    matchLabels:
      app: rambleon
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: rambleon
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "status.localhost"
      containers:
      - name: rambleon-app
        image: registry.gitlab.com/rambleon/rambleon-org:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
