deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rambleon
  namespace: rambleon
  labels:
    app: rambleon
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: rambleon
